--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,37 @@
 spring.application.name=hotel-management
+# ===============================================
+# ============ DATABASE CONFIGURATION ===========
+# ===============================================
+# MySQL URL connection
+spring.datasource.url=jdbc:mysql://localhost:3306/java
+spring.datasource.username=root
+spring.datasource.password=123456
+
+# Driver cho MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ===============================================
+# ============ JPA CONFIGURATION ================
+# ===============================================
+# Hibernate DDL auto (create, update, validate, none)
+spring.jpa.hibernate.ddl-auto=update
+
+# Hibernate dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# show query command in console
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# ===============================================
+# ============ SERVER CONFIGURATION =============
+# ===============================================
+# port
+server.port=8080
+
+# ===============================================
+# ============ LOGGING CONFIGURATION ============
+# ===============================================
+## Logging
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql=TRACE
