add Employee REST API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,4 @@ server.port=8080
 ## Logging
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql=TRACE
+logging.level.org.springframework=DEBUG
